--- a/headwear.html
+++ b/headwear.html
@@ -11,15 +11,15 @@
     </head>
     <body>
         <header>
-            <a href="index.php">
+            <a href="index.html">
                 <img src="images/logo.png" id="hunter"> 
             </a>
             <nav>
                 <ul>
-                    <li><a href="tops.php">tops</a></li>
-                    <li><a href="bottoms.php">bottoms</a></li>
-                    <li><a href="footwear.php">footwear</a></li>
-                    <li><a href="headwear.php">headwear</a></li>
+                    <li><a href="tops.html">tops</a></li>
+                    <li><a href="bottoms.html">bottoms</a></li>
+                    <li><a href="footwear.html">footwear</a></li>
+                    <li><a href="headwear.html">headwear</a></li>
                 </ul>
             </nav>
         </header>
@@ -63,8 +63,8 @@
                     <button id="finalAdd">add to cart</button>
                 </div>
             </div>
-            <div class="wrapper">
-                <?php
+            <!-- <div class="wrapper">
+                < ?php
                     $db_host   = '192.168.2.13';
                     $db_name   = 'fvision';
                     $db_user   = 'webuser';
@@ -83,7 +83,7 @@
                         echo "</div>\n";
                     }
                 ?>
-            </div>
+            </div> -->
             <footer>
                 <h2>about HUNTER</h2>
                 <p>HUNTER is a world leader in contemporary mens fashion</p>
