--- a/tops.html
+++ b/tops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html lang="en">
     <head>
-        <title>HUNTER</title>
+        <title>HUNTER -> tops</title>
         <meta charset="utf-8">
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="css/style.css"/>
@@ -11,15 +11,15 @@
     </head>
     <body>
         <header>
-            <a href="index.php">
+            <a href="index.html">
                 <img src="images/logo.png" id="hunter"> 
             </a>
             <nav>
                 <ul>
-                    <li><a href="tops.php">tops</a></li>
-                    <li><a href="bottoms.php">bottoms</a></li>
-                    <li><a href="footwear.php">footwear</a></li>
-                    <li><a href="headwear.php">headwear</a></li>
+                    <li><a href="tops.html">tops</a></li>
+                    <li><a href="bottoms.html">bottoms</a></li>
+                    <li><a href="footwear.html">footwear</a></li>
+                    <li><a href="headwear.html">headwear</a></li>
                 </ul>
             </nav>
         </header>
@@ -63,15 +63,15 @@
                     <button id="finalAdd">add to cart</button>
                 </div>
             </div>
-            <div class="wrapper">
-                <?php
+            <!-- <div class="wrapper">
+                < ?php
                     $db_host   = '192.168.2.13';
                     $db_name   = 'fvision';
                     $db_user   = 'webuser';
                     $db_passwd = 'insecure_db_pw';
                     $pdo_dsn = "mysql:host=$db_host;dbname=$db_name";
                     $pdo = new PDO($pdo_dsn, $db_user, $db_passwd);
-                    $q = $pdo->query("SELECT * FROM products");
+                    $q = $pdo->query("SELECT * FROM products WHERE product_category='tops'");
                     while($row = $q->fetch()){
                         echo "<div class='box'>";
                         echo "<a><img src='".$row["product_imagepath"]."' id='productImage'></a>";
@@ -83,7 +83,7 @@
                         echo "</div>\n";
                     }
                 ?>
-            </div>
+            </div> -->
             <footer>
                 <h2>about HUNTER</h2>
                 <p>HUNTER is a world leader in contemporary mens fashion</p>
